// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en archivo GifExpertApp Comprobar GifExpertApp correctamente 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en archivo GifExpertApp Debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Baku No hero Academy"
      key="Baku No hero Academy"
    />
    <GifGrid
      category="Shingeki No Kyogi"
      key="Shingeki No Kyogi"
    />
  </ol>
</Fragment>
`;
